--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="bower_components/threejs/build/three.js"></script>
   <!-- <script src="bower_components/potree/libs/three.js/build/three.js"></script> -->
   <script src="bower_components/OrbitControls/index.js"></script>
+  <script src="bower_components/PointerLockControls/index.js"></script>
   <script src="bower_components/stats.js/build/stats.min.js"></script>
   <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
   
@@ -22,13 +23,6 @@
   <script src="bower_components/potree/src/utils.js"></script>
   <script src="bower_components/potree/src/LRU.js"></script>
   
-  <input type="button" value="place start" 
-    style="position:absolute; left: 10px; top: 10px; width: 100px; z-index: 100" 
-    onclick="placeStart()">
-  <input type="button" value="place end" 
-    style="position:absolute; left: 10px; top: 40px; width: 100px; z-index: 100"
-    onclick="placeEnd()">
-    
   <div id="lblDistance" style="position: absolute; width: 20px; z-index: 100;">abc</div>
   
   <div id="lblNumVisibleNodes" class="info" style="position: absolute; left: 10px; top: 80px; width: 400px;"></div>
