--- a/index.html
+++ b/index.html
@@ -35,47 +35,54 @@
 
   <script src="bower_components/proj4/dist/proj4.js"></script>
   
-  <div class="container-fluid">
-    <div class="row">
-        <div class="col-xs-4">
-            <div class="form-group clickable" ng-controller="SearchCtrl">
-                <div class="input-group">
-                    <div class="glyphicon glyphicon-search input-group-addon"></div>
-                    <input type="text" class="form-control" id="search" placeholder="Search..." ng-model="query">
-                </div>
-                <div class="panel" id="search-results" ng-show="query">
-                    <div class="search-result" ng-repeat="site in sites | filter : searchFn as results" ng-cloak>
-                        <div style="display: inline-block; vertical-align: top;">
-                            <img ng-src="{{ site.properties.thumbnail }}" width="120">
-                        </div>
-                        <div style="display:inline-block;">
-                            <strong>{{ site.properties.description }}</strong>
-                            <p>{{ site.properties.site_interpretation }}</p>
-                        </div>
+  <div id="wrap">
+      <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="form-group clickable" ng-controller="SearchCtrl">
+                    <div class="input-group">
+                        <div class="glyphicon glyphicon-search input-group-addon"></div>
+                        <input type="text" class="form-control" id="search" placeholder="Search..." ng-model="query">
                     </div>
-                    <div ng-if="results.length == 0" ng-cloak>No results.</div>
+                    <div class="panel" id="search-results" ng-show="query">
+                        <div class="search-result" ng-repeat="site in sites | filter : searchFn as results" ng-cloak>
+                            <div style="display: inline-block; vertical-align: top;">
+                                <img ng-src="{{ site.properties.thumbnail }}" width="120">
+                            </div>
+                            <div style="display:inline-block;">
+                                <strong>{{ site.properties.description }}</strong>
+                                <p>{{ site.properties.site_interpretation }}</p>
+                            </div>
+                        </div>
+                        <div ng-if="results.length == 0" ng-cloak>No results.</div>
+                    </div>  
                 </div>
             </div>
-        </div>
-        <div class="col-xs-5">
-            <div id="lblDistance" class="clickable" style="z-index: 100;">abc</div>
+            <div class="col-xs-5">
+                <div id="lblDistance" class="clickable" style="z-index: 100;">abc</div>
   
-            <div id="lblNumVisibleNodes" class="info clickable"></div>
-            <div id="lblNumVisiblePoints" class="info clickable"></div>
-            <div id="lblPosition" class="info clickable"></div>
+                <div id="lblNumVisibleNodes" class="info clickable"></div>
+                <div id="lblNumVisiblePoints" class="info clickable"></div>
+                <div id="lblPosition" class="info clickable"></div>
             
-            <input type="button" value="place start" class="clickable" style="z-index: 100" onclick="placeStart()">
-            <input type="button" value="place end" class="clickable" style="z-index: 100" onclick="placeEnd()">
-            <input type="button" value="toggle oculus" class="clickable" style="z-index: 100" onclick="toggleOculus()">
-        </div>
-        <div class="col-xs-3">
-            <span class="pull-right">
-            <div id="overhead-map" class="clickable">
+                <input type="button" value="place start" class="clickable" style="z-index: 100" onclick="placeStart()">
+                <input type="button" value="place end" class="clickable" style="z-index: 100" onclick="placeEnd()">
+                <input type="button" value="toggle oculus" class="clickable" style="z-index: 100" onclick="toggleOculus()">
             </div>
-            </span>
-        </div>
+            <div class="col-xs-3">
+                <span class="pull-right">
+                <div id="overhead-map" class="clickable">
+                </div>
+                </span>
+            </div>
+          </div>
       </div>
-   </div>
+  </div>
+  <div class="footer clickable">
+     <div class="container-fluid">
+         <p class="text-muted">Place sticky footer content here.</p>
+     </div>
+  </div>
 
   <script src="js/controllers.js"></script>
 
