--- a/index.html
+++ b/index.html
@@ -58,17 +58,6 @@
                     </div>  
                 </div>
             </div>
-            <div class="col-xs-5">
-                <div id="lblDistance" class="clickable" style="z-index: 100;">abc</div>
-  
-                <div id="lblNumVisibleNodes" class="info clickable"></div>
-                <div id="lblNumVisiblePoints" class="info clickable"></div>
-                <div id="lblPosition" class="info clickable"></div>
-            
-                <input type="button" value="place start" class="clickable" style="z-index: 100" onclick="placeStart()">
-                <input type="button" value="place end" class="clickable" style="z-index: 100" onclick="placeEnd()">
-                <input type="button" value="toggle oculus" class="clickable" style="z-index: 100" onclick="toggleOculus()">
-            </div>
             <div class="col-xs-3">
                 <span class="pull-right">
                 <div id="overhead-map" class="clickable">
@@ -80,7 +69,19 @@
   </div>
   <div class="footer clickable">
      <div class="container-fluid">
-         <p class="text-muted">Place sticky footer content here.</p>
+         <div class="row">
+            <div class="col-xs-5">
+                <div id="lblDistance" class="clickable" style="z-index: 100;">abc</div>
+  
+                <div id="lblNumVisibleNodes" class="info clickable"></div>
+                <div id="lblNumVisiblePoints" class="info clickable"></div>
+                <div id="lblPosition" class="info clickable"></div>
+            
+                <input type="button" value="place start" class="clickable" style="z-index: 100" onclick="placeStart()">
+                <input type="button" value="place end" class="clickable" style="z-index: 100" onclick="placeEnd()">
+                <input type="button" value="toggle oculus" class="clickable" style="z-index: 100" onclick="toggleOculus()">
+            </div>
+         </div>
      </div>
   </div>
 
